--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-register": "^6.7.2",
+    "expect": "^1.15.2",
     "html-webpack-plugin": "^2.10.0",
+    "mocha": "^2.4.5",
+    "react-addons-test-utils": "^0.14.7",
     "webpack": "^1.12.14"
   },
   "scripts": {
     "start": "webpack-dev-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register",
+    "test:watch": "npm test -- --watch"
   },
   "author": "andrey.novysh",
   "license": "MIT",
