--- a/package.json
+++ b/package.json
@@ -26,12 +26,15 @@
   "author": "andrey.novysh",
   "license": "MIT",
   "dependencies": {
+    "es6-promise": "^3.1.2",
+    "isomorphic-fetch": "^2.2.1",
     "material-ui": "^0.14.4",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.1",
     "react-router": "^2.0.1",
     "react-tap-event-plugin": "^0.2.2",
-    "redux": "^3.3.1"
+    "redux": "^3.3.1",
+    "redux-thunk": "^2.0.1"
   }
 }
